l10n for bug 481966 - make the "You" string used in email addresses in header lines localized separately for each specific header

--- a/pl/mail/chrome/messenger/messenger.properties
+++ b/pl/mail/chrome/messenger/messenger.properties
@@ -370,8 +370,11 @@ fileNotFoundMsg   = Plik %S nie istnieje.
 fileEmptyTitle    = Pusty plik
 fileEmptyMsg      = Plik %S jest pusty.
 
-# headerFieldYou is used if the user is in the To or Cc field of a message
-headerFieldYou = Ja
+headertoFieldYou       = Ja
+headerfromFieldYou     = Ja
+headerreply-toFieldYou = Ja
+headerccFieldYou       = Ja
+headerbccFieldYou      = Ja
 
 loadingTab = Wczytywanie…
 
