--- a/fr/mail/chrome/messenger/offline.properties
+++ b/fr/mail/chrome/messenger/offline.properties
@@ -17,4 +17,4 @@ sendMessagesOfflineWindowTitle1=Messages en attente
 sendMessagesOfflineLabel1=Vous êtes hors connexion. Voulez-vous vous connecter pour envoyer les messages en attente ?
 
 offlineTooltip=Vous êtes actuellement hors connexion.
-onlineTooltip=Vous êtes actuellement connecté.
+onlineTooltip=Vous êtes actuellement en ligne.
