--- a/pl/browser/chrome/browser/browser.properties
+++ b/pl/browser/chrome/browser/browser.properties
@@ -53,6 +53,9 @@ undo.accessKey=C
 missingpluginsMessage.title=Aby wyświetlić pełną zawartość tej strony, potrzebne są dodatkowe wtyczki.
 missingpluginsMessage.button.label=Zainstaluj brakujące wtyczki…
 missingpluginsMessage.button.accesskey=i
+outdatedpluginsMessage.title=Niektóre wtyczki używane przez tę stronę są nieaktualne.
+outdatedpluginsMessage.updateButton.label=Zaktualizuj wtyczki…
+outdatedpluginsMessage.updateButton.accesskey=Z
 blockedpluginsMessage.title=Niektóre wtyczki wymagane do wyświetlenia tej strony zostały zablokowane z przyczyn bezpieczeństwa.
 blockedpluginsMessage.infoButton.label=Szczegóły…
 blockedpluginsMessage.infoButton.accesskey=S
