l10n forBug 502501  - rename History > Recently Closed Tabs > Open All in Tabs to Restore All Tabs.

--- a/pl/browser/chrome/browser/browser.properties
+++ b/pl/browser/chrome/browser/browser.properties
@@ -101,7 +101,7 @@ feedShowFeedNew=Subskrybuj "%S"…
 menuOpenAllInTabs.label=Otwórz wszystkie w kartach
 
 # History menu
-menuRestoreAllTabs.accesskey=Przywróć wszystkie karty
+menuRestoreAllTabs.label=Przywróć wszystkie karty
 menuRestoreAllTabs.accesskey=P
 
 # LOCALIZATION NOTE (menuRestoreAllWindows, menuUndoCloseWindowLabel, menuUndoCloseWindowSingleTabLabel):
