l10n for Bug 508684  - Add Ability to Change 'Firefox as your default browser' and inform of upgrade on Summary step

--- a/pl/browser/installer/custom.properties
+++ b/pl/browser/installer/custom.properties
@@ -58,7 +58,6 @@ CONTEXT_SAFE_MODE=$BrandShortName - &tryb awaryjny
 SAFE_MODE=Tryb awaryjny
 OPTIONS_PAGE_TITLE=Rodzaj instalacji
 OPTIONS_PAGE_SUBTITLE=Wybór opcji instalacji
-OPTIONS_MAKE_DEFAULT=&Ustaw program $BrandShortName jako domyślną przeglądarkę
 SHORTCUTS_PAGE_TITLE=Tworzenie skrótów
 SHORTCUTS_PAGE_SUBTITLE=Utwórz ikony programu
 SUMMARY_PAGE_TITLE=Podsumowanie
@@ -66,8 +65,9 @@ SUMMARY_PAGE_SUBTITLE=Można już rozpocząć instalację programu $BrandShortNa
 SUMMARY_INSTALLED_TO=Program $BrandShortName zostanie zainstalowany w poniższym katalogu:
 SUMMARY_REBOOT_REQUIRED_INSTALL=Aby dokończyć instalację programu, może być wymagane ponowne uruchomienie komputera.
 SUMMARY_REBOOT_REQUIRED_UNINSTALL=Aby dokończyć dezinstalację programu, może być wymagane ponowne uruchomienie komputera.
-SUMMARY_MAKE_DEFAULT=Program $BrandShortName zostanie ustawiony jako domyślna przeglądarka.
-SUMMARY_CLICK=Aby kontynuować, kliknij przycisk Zainstaluj.
+SUMMARY_TAKE_DEFAULTS=&Ustaw program $BrandShortName jako domyślną przeglądarkę
+SUMMARY_INSTALL_CLICK=Aby kontynuować, kliknij przycisk Zainstaluj.
+SUMMARY_UPGRADE_CLICK=Aby kontynuować, kliknij przycisk Zaktualizuj.
 SURVEY_TEXT=&Wyraź swoją opinię na temat programu $BrandShortName
 LAUNCH_TEXT=&Uruchom program $BrandShortName
 CREATE_ICONS_DESC=Utwórz ikony dla programu $BrandShortName:
@@ -108,3 +108,9 @@ OPTION_STANDARD_RADIO=&Standardowa
 # Two lines
 OPTION_CUSTOM_DESC=Można wybrać, które komponenty mają zostać zainstalowane. Opcja zalecana tylko dla zaawansowanych użytkowników.
 OPTION_CUSTOM_RADIO=&Użytkownika
+
+# LOCALIZATION NOTE:
+# The following text replaces the Install button text on the summary page.
+# Verify that the access key for InstallBtn (in override.properties) and
+# UPGRADE_BUTTON is not already used by SUMMARY_TAKE_DEFAULTS.
+UPGRADE_BUTTON=&Zaktualizuj
