--- a/pl/browser/chrome/browser/browser.properties
+++ b/pl/browser/chrome/browser/browser.properties
@@ -221,3 +221,5 @@ ctrlTab.showAll.label=;Wyświetl wszystkie #1 karty;Wyświetl wszystkie #1 kart
 # Used as the bookmark name when saving a keyword for a search field.
 addKeywordTitleAutoFill=Szukaj na stronie %S
 
+extensions.{972ce4c6-7e08-4474-a285-3208198ce6fd}.name=Domyślny
+extensions.{972ce4c6-7e08-4474-a285-3208198ce6fd}.description=Motyw domyślny.
