l10n for Bug 510909: Integrate most recently used lightweight themes into the themes list in the add-ons manager (strings)

--- a/pl/toolkit/chrome/mozapps/extensions/extensions.properties
+++ b/pl/toolkit/chrome/mozapps/extensions/extensions.properties
@@ -16,6 +16,8 @@ droppedInWarning=W folderze rozszerzeń znaleziono następujące elementy. Czy c
 updateNotificationTitle=Znaleziono aktualizacje dla dodatków
 updateNotificationText=Program %S znalazł aktualizację dla 1 z zainstalowanych dodatków
 multipleUpdateNotificationText=Program %S znalazł aktualizacje dla %S zainstalowanych dodatków
+# LOCALIZATION NOTE (lightweightThemeDescription): %S is the theme designer, either a person or organisation
+lightweightThemeDescription=Autor: %S.
 
 uninstallButton=Odinstaluj
 disableButton=Wyłącz
