--- a/fr/mail/chrome/messenger/quickSearch.properties
+++ b/fr/mail/chrome/messenger/quickSearch.properties
@@ -1,8 +1,8 @@
 searchEverywhere.label=Rechercher n'importe où
 searchSubject.label=Filtrer par sujet
-searchFrom.label=Filtrer sur l'expéditeur
-searchFromOrSubject.label=Filtrer sur le sujet ou l'expéditeur
-searchRecipient.label=Filtrer sur le destinataire ou les personnes en copie
-searchRecipientOrSubject.label=Filtrer sur le sujet, le destinataire ou les personnes en copie
+searchFrom.label=Filtrer par expéditeur
+searchFromOrSubject.label=Filtrer par sujet ou expéditeur
+searchRecipient.label=Filtrer par destinataire ou personnes en copie
+searchRecipientOrSubject.label=Filtrer par sujet, destinataire ou personnes en copie
 searchBody.label=Filtrer sur tout le message
 saveAsVirtualFolder.label=Enregistrer la recherche comme dossier virtuel
