--- a/nb-NO/mail/chrome/messenger/accountCreation.properties
+++ b/nb-NO/mail/chrome/messenger/accountCreation.properties
@@ -1,10 +1,9 @@
 # accountCreation.properties
 
-# LOCALIZATION NOTE: %1$S will be the name of the app (i.e. ThunderBird), %2$S will be the hostname of the server the user was trying to connect to.
-incoming_cleartext_warning=Du har konfigurert %1$S til å koble til innkommende e-posttjener %2$S, som er en usikker tjener.
-incoming_selfsigned_warning=Du har konfigurert %1$S til å sikkert koble til innkommende e-posttjener %2$S, men vi kan ikke bekrefte at tilkoblingen er sikker.
-outgoing_cleartext_warning=Du har konfigurert %1$S til å kopible til utgående e-posttjener %2$S, som er en usikker tjener.
-outgoing_selfsigned_warning=Du har konfigurert %1$S til å sikkert koble til utgående e-posttjener %2$S, men vi kan ikke bekrefte at tilkoblingen er sikker.
+# LOCALIZATION NOTE(cleartext_warning): %1$S will be the hostname of the server the user was trying to connect to.
+cleartext_warning=%1$S bruker ikke kryptering.
+# LOCALIZATION NOTE(selfsigned_warning): %1$S will be the hostname of the server the user was trying to connect to.
+selfsigned_warning=%1$S bruker ikke et tiltrodd sertifikat.
 selfsigned_details=Normalt vil en sikker e-posttjener tilby et tiltrodd sertifikat for å bevise at den er tjeneren som den utgir seg for å være. Tilkoblingen til e-posttjeneren vil krypteres, men det kan ikke valideres at tilkoblingen går til riktig tjener.
 cleartext_details=Usikre e-posttjenere bruker ikke kryptering for å beskytte passord og privat informasjon. Ved å koble til denne tjeneren kan du avsløre passordet ditt eller privat informasjon.
 
@@ -12,10 +11,13 @@ cleartext_details=Usikre e-posttjenere bruker ikke kryptering for å beskytte pa
 default_server_tag= (standard)
 
 # config titles
-searching_for_configs=Søker …
-manually_edit_config=Endrer konfigurasjon
-finished_with_success=Fullført
-finished_with_error=Feil
+# LOCALIZATION NOTE(looking_up_settings): %1$S will be the brandShortName.
+looking_up_settings=%1$S ser etter innstillinger for din e-postkonto.
+manually_edit_config=Redigerer konfigurasjon
+# LOCALIZATION NOTE(found_settings): %1$S will be the brandShortName.
+found_settings=%1$S har funnet innstillingene for e-postkontoen din.
+# LOCALIZATION NOTE(failed_to_find_settings): %1$S will be the brandShortName.
+failed_to_find_settings=%1$S klarte ikke finne innstillingene for e-postkontoen din.
 
 # config subtitles
 check_preconfig=søker etter forhåndskonfigurasjon …
@@ -47,6 +49,5 @@ no_encryption=Ingen kryptering
 ssl_tls=SSL/TLS
 starttls=STARTTLS
 
-name.error=Skriv inn navnet ditt, slik det skal vises for mottakerne av e-post.
-email.error=Dobbeltsjekk denne e-postadressen!
-password.error=Innlogging var ikke vellykket. Dobbeltsjekk brukernavnet og passordet.
+please_enter_name=Skriv inn navnetditt.
+double_check_email=Dobbeltsjekk denne e-postadressen!
