--- a/nb-NO/mail/chrome/messenger/preferences/preferences.properties
+++ b/nb-NO/mail/chrome/messenger/preferences/preferences.properties
@@ -30,16 +30,28 @@ useOtherApp=Bruk annet …
 fpTitleChooseApp=Velg hjelpeprogram
 manageApp=Programdetaljer …
 alwaysAsk=Spør alltid
+delete=Slett handling
+confirmDeleteTitle=Slett handling
+confirmDeleteText=Er du sikker på at du vil slette denne handlingen?
 
 # LOCALIZATION NOTE (usePluginIn):
 # %1$S = plugin name (for example "QuickTime Plugin-in 7.2")
 # %2$S = brandShortName from brand.properties (for example "Shredder")
 usePluginIn=Bruk %1$S (i %2$S)
 
-# LOCALIZATION NOTE (typeDescriptionWithType):
+# LOCALIZATION NOTE (typeDescriptionWithDetails):
 # %1$S = type description (for example "Portable Document Format")
-# %2$S = type (for example "application/pdf")
-typeDescriptionWithType=%1$S (%2$S)
+# %2$S = details (see below, for example "(application/pdf: .pdf, .pdfx)")
+typeDescriptionWithDetails=%1$S %2$S
+
+# LOCALIZATION NOTE (typeDetailsWithTypeOrExt):
+# %1$S = type or extensions (for example "application/pdf", or ".pdf, .pdfx")
+typeDetailsWithTypeOrExt=(%1$S)
+
+# LOCALIZATION NOTE (typeDetailsWithTypeAndExt):
+# %1$S = type (for example "application/pdf")
+# %2$S = extensions (for example ".pdf, .pdfx")
+typeDetailsWithTypeAndExt=(%1$S: %2$S)
 
 #### Sound Notifications
 soundFilePickerTitle=Velg lyd
@@ -53,3 +65,25 @@ attachmentReminderAddDialogTitle=Legg til nøkkelord
 attachmentReminderAddText=Nøkkelord:
 attachmentReminderEditDialogTitle=Rediger nøkkelord
 attachmentReminderEditText=Nøkkelord:
+
+#### Cookies
+cookiepermissionstitle=Unntak - infokapsler
+cookiepermissionstext=Du kan angi hvilke nettsider som alltid eller aldri er tillatt bruke infokapsler.  Skriv inn den eksakte adressen til nettstedet du vil behandle, og trykk deretter Blokker, Tillat for programøkt, eller Tillat.
+invalidURI=Skriv inn en gyldig nettadresse
+invalidURITitle=Ugyldig nettadresse
+
+#### Cookie Viewer
+hostColon=Vert:
+domainColon=Domene:
+forSecureOnly=Bare for krypterte tilkoblinger
+forAnyConnection=Alle typer tilkoblinger
+AtEndOfSession=på slutten av programøkten
+can=Tillat
+canSession=Tillat for programøkten
+cannot=Blokker
+noCookieSelected=<ingen infokapsel valgt>
+cookiesAll=Følgende infokapsler lagres på datamaskinen:
+cookiesFiltered=Følgende infokapsler passer til søket:
+removeCookies=Fjern infokapsler
+removeCookie=Fjern infokapsel
+
