l10n for c-c rev 3654:5e81cdea63ba by Andrew Sutherland, no bug ref, no useful description

--- a/pl/mail/chrome/messenger/gloda.properties
+++ b/pl/mail/chrome/messenger/gloda.properties
@@ -49,10 +49,9 @@ gloda.message.attr.toMe.facetTooltip   = Wiadomości adresowane do mnie
 
 gloda.message.attr.involves.facetLabel   = Korespondenci
 gloda.message.attr.involves.facetTooltip = Wszystkie osoby wymienione w nagłówkach od, do, kopia i ukryta kopia dla tej wiadomości
-
-# FIXME: dotłumaczyć
-gloda.message.attr.involves.includeLabel =Involving
-gloda.message.attr.involves.excludeLabel =Not involving
+# FIXME: dotłumaczyć (po sprawdzeniu w ui)
+gloda.message.attr.involves.includeLabel =Involving any of
+gloda.message.attr.involves.remainderLabel=Participants
 
 gloda.message.attr.date.facetLabel   = Data
 gloda.message.attr.date.facetTooltip = Data utworzenia wiadomości
