Update nb-NO l10n

--- a/nb-NO/mail/chrome/messenger/editContactOverlay.properties
+++ b/nb-NO/mail/chrome/messenger/editContactOverlay.properties
@@ -2,6 +2,6 @@ editTitle=Rediger kontakt
 viewTitle=Vis kontakt
 
 editDetailsLabel=Rediger detaljer
-editDetailsAccessKey=d
+editDetailsAccessKey=R
 viewDetailsLabel=Vis detaljer
 viewDetailsAccessKey=V
