--- a/nb-NO/mail/chrome/messenger/quickSearch.properties
+++ b/nb-NO/mail/chrome/messenger/quickSearch.properties
@@ -1,8 +1,8 @@
-searchEverywhere.label=Søk overalt
-searchSubject.label=Emnefilter
-searchFrom.label=Fra-filter
-searchFromOrSubject.label=Emne- eller fra-filter
-searchRecipient.label=Til- eller Cc-filter
-searchRecipientOrSubject.label=Emne, til, eller Cc-filter
-searchBody.label=Hele meldingen-filter
+searchEverywhere.label=Søk
+searchSubject.label=Emne
+searchFrom.label=Fra
+searchFromOrSubject.label=Emne eller fra
+searchRecipient.label=Til eller Cc
+searchRecipientOrSubject.label=Emne, til, eller Cc
+searchBody.label=Hele meldingen
 saveAsVirtualFolder.label=Lagre søk som søkemappe
