--- a/nb-NO/mail/chrome/messenger/imapMsgs.properties
+++ b/nb-NO/mail/chrome/messenger/imapMsgs.properties
@@ -133,7 +133,7 @@
 ## @name IMAP_GETTING_ACL_FOR_FOLDER
 ## @loc None
 # LOCALIZATION NOTE (Error 5029): Do not translate the word "ACL" below.
-5029=Henter mappe-ACLer …
+5029=Henter ACL-er for mappe …
 
 ## @name IMAP_GETTING_SERVER_INFO
 ## @loc None
@@ -204,7 +204,7 @@
 ## @loc None
 # LOCALIZATION NOTE (Error 5046): Do not translate the word "%S" below.
 # Place the word %S in your translation where the name of the folder should appear.
-5046=Fant mappe\: %S
+5046=Fant mappe: %S
 
 ## @name IMAP_ENTER_PASSWORD_PROMPT
 ## @loc None
