L10n for bug 506290 - [autoconfig] Layout changes to quick account setup.

--- a/sv-SE/mail/chrome/messenger/accountCreation.properties
+++ b/sv-SE/mail/chrome/messenger/accountCreation.properties
@@ -1,7 +1,8 @@
 # accountCreation.properties
 
-# LOCALIZATION NOTE: %1$S will be the hostname of the server the user was trying to connect to.
+# LOCALIZATION NOTE(cleartext_warning): %1$S will be the hostname of the server the user was trying to connect to.
 cleartext_warning=%1$S använder inte kryptering.
+# LOCALIZATION NOTE(selfsigned_warning): %1$S will be the hostname of the server the user was trying to connect to.
 selfsigned_warning=%1$S använder inte ett betrott certifikat.
 selfsigned_details=En säker e-postserver presenterar normalt ett betrott certifikat som bevisar att servern verkligen är den den utger sig för att vara. Anslutningen till e-postservern kommer att vara krypterad men det kan inte bekräftas att du ansluter till rätt server.
 cleartext_details=En osäker e-postserver använder inte en krypterad anslutning för att skydda dina lösenord och privata uppgifter. Genom att ansluta till den här servern kan dina lösenord och privata uppgifter avslöjas.
@@ -10,10 +11,13 @@ cleartext_details=En osäker e-postserver använder inte en krypterad anslutning
 default_server_tag= (standard)
 
 # config titles
-searching_for_configs=Söker…
+# LOCALIZATION NOTE(looking_up_settings): %1$S will be the brandShortName.
+looking_up_settings=%1$S söker efter inställningarna för ditt e-postkonto.
 manually_edit_config=Redigerar inställningarna
-finished_with_success=Slutförd
-finished_with_error=Fel
+# LOCALIZATION NOTE(found_settings): %1$S will be the brandShortName.
+found_settings=%1$S har hittat inställningarna för ditt e-postkonto.
+# LOCALIZATION NOTE(failed_to_find_settings): %1$S will be the brandShortName.
+failed_to_find_settings=%1$S misslyckades med att hitta inställningarna för ditt e-postkonto.
 
 # config subtitles
 check_preconfig=söker efter förkonfiguration…
@@ -45,6 +49,5 @@ no_encryption=Ingen kryptering
 ssl_tls=SSL/TLS
 starttls=STARTTLS
 
-name.error=Skriv in ditt namn såsom det ska visas för dina korrespondenter.
-email.error=Dubbelkolla denna e-postadress!
-password.error=Inloggningen misslyckades. Kontrollera användarnamn och lösenord.
+please_enter_name=Skriv in ditt namn.
+double_check_email=Dubbelkolla denna e-postadress!
