l10n for Bug 435035  - Use different strings for mixed content in the identity UI

--- a/pl/browser/chrome/browser/browser.properties
+++ b/pl/browser/chrome/browser/browser.properties
@@ -149,6 +149,7 @@ identity.identified.title_with_country=%S (%S)
 
 identity.encrypted=Połączenie z tą witryną jest szyfrowane, uniemożliwiając podsłuchiwanie.
 identity.unencrypted=Połączenie z tą witryną nie jest szyfrowane.
+identity.mixed_content=Połączenie z tą witryną jest tylko częściowo szyfrowane, nie zabezpiecza przed podsłuchiwaniem.
 
 identity.unknown.tooltip=Ta witryna nie dostarcza informacji o swej tożsamości.
 identity.ownerUnknown2=(nieznany)
