--- a/pl/mail/chrome/messenger/preferences/preferences.properties
+++ b/pl/mail/chrome/messenger/preferences/preferences.properties
@@ -44,3 +44,25 @@ attachmentReminderAddDialogTitle  = Dodaj słowo kluczowe
 attachmentReminderAddText         = Słowo kluczowe:
 attachmentReminderEditDialogTitle = Edytuj słowo kluczowe
 attachmentReminderEditText        = Słowo kluczowe:
+
+# Cookies
+cookiepermissionstitle = Wyjątki - Ciasteczka
+cookiepermissionstext  = Możesz określić zasady akceptacji ciasteczek. Podaj dokładny adres witryny, której uprawnienia chcesz zmodyfikować, a następnie naciśnij Zezwól, Zablokuj lub Zezwól na czas sesji.
+invalidURI             = Podaj poprawną nazwę hosta
+invalidURITitle        = Wprowadzono niepoprawną nazwę hosta
+
+hostColon              = Host:
+domainColon            = Domena:
+forSecureOnly          = Tylko szyfrowane połączenia
+forAnyConnection       = Dowolny rodzaj połączenia
+expireAtEndOfSession   = Pod koniec sesji
+
+can                    = Zezwól
+canSession             = Zezwól na czas sesji
+cannot                 = Zablokuj
+
+noCookieSelected       = <nie zaznaczono ciasteczka>
+cookiesAll             = Następujące ciasteczka są przechowywane na tym komputerze:
+cookiesFiltered        = Następujące ciasteczka odpowiadają zapytaniu:
+removeCookies          = Usuń ciasteczka
+removeCookie           = Usuń ciasteczko
