Update nb-NO l10n

--- a/nb-NO/mail/chrome/messenger/messenger.properties
+++ b/nb-NO/mail/chrome/messenger/messenger.properties
@@ -100,7 +100,7 @@ alertFilterCheckbox=Ikke advar meg igjen
 compactFolderDeniedLock=Klarte ikke komprimere mappen «%S» fordi en annen operasjon foregår allerede. Prøv igjen senere.
 compactFolderWriteFailed=Klarte ikke komprimere mappen «%S» fordi skriving til mappen feilet. Kontroller at du har nok diskplass, og at du har skrivetilgang til filsystemet, og prøv igjen.
 filterFolderWriteFailed=Klarte ikke filtrere denne meldingen til mappen «%S» fordi skriving til mappen feilet. Kontroller at du har nok diskplass, og at du har tillatelse til å skrive til filsystemet, og prøv igjen.
-copyMsgWriteFailed=Meldingen kunne ikke bli flyttet eller kopiert til mappen «%S» fordi skriving til mappen feilet. For å få mer diskplass, så velg «Tøm søppel» fra Fil-menyen. Også prøv å komprimer mapper.
+copyMsgWriteFailed=Meldingen kunne ikke bli flyttet eller kopiert til mappen «%S» fordi skriving til mappen feilet. For å få mer diskplass, velg «Tøm søppel» fra Fil-menyen. Prøv også å komprimere mapper.
 cantMoveMsgWOBodyOffline=Du kan ikke flytte eller kopiere meldinger som ikke var lastet ned for frakoblet bruk mens du er i frakoblet tilstand. Fra E-postvinduet, åpne Fil-menyen, velg Frakoblet, og velg Arbeid tilkoblet og prøv igjen.
 operationFailedFolderBusy=Operasjonen feilet fordi en annen operasjon bruker mappen. Vent til den andre operasjonen fullfører, og prøv igjen.
 folderRenameFailed=Klarte ikke endre navn på mappen. Sannsynligvis blir mappen lest akkurat nå, eller så er navnet ikke et gyldig mappenavn.
