fix two string names issues for gloda snafu

--- a/pl/mail/chrome/messenger/glodaFacetView.properties
+++ b/pl/mail/chrome/messenger/glodaFacetView.properties
@@ -64,7 +64,7 @@ glodaFacetView.result.message.fromLabel = od:
 glodaFacetView.result.message.toLabel   = do:
 
 glodaFacetView.results.message.countLabel = Wyświetlanie #1 wiadomości z #3 ogółem
-lodaFacetView.results.message.countLabelMessagePlurals=
+glodaFacetView.results.message.countLabelMessagePlurals=
 
 glodaFacetView.results.message.showAllInList.label   = Wyświetl wszystkie jako listę w nowej karcie
 glodaFacetView.results.message.showAllInList.tooltip = Wyświetli listę wszystkich aktualnie wyświetlanych wiadomości w nowej karcie (obecna karta zostanie zamknięta)
