--- a/uk/mail/chrome/messenger/messenger.properties
+++ b/uk/mail/chrome/messenger/messenger.properties
@@ -1,4 +1,3 @@
-# FIXME: localize
 # ***** BEGIN LICENSE BLOCK *****
 # Version: MPL 1.1/GPL 2.0/LGPL 2.1
 #
@@ -472,6 +471,8 @@ emptyTrashDontAsk=Більше не питати мене.
 junkAnalysisPercentComplete=Спам-аналіз закінчено на %S 
 processingJunkMessages=Обробка небажаної пошти
 
+# FIXME: localize
+
 # Messenger bootstrapping messages
 fileNotFoundTitle = File Not Found
 #LOCALIZATION NOTE(fileNotFoundMsg): %S is the filename
@@ -481,9 +482,27 @@ fileEmptyTitle = File Empty
 #LOCALIZATION NOTE(fileEmptyMsg): %S is the filename
 fileEmptyMsg = The file %S is empty.
 
-# second person direct object pronoun; used in the collapsed header view if
-# the user is in the To or Cc field of a message
-headerFieldYou=Ви
+# LOCALIZATION NOTE (headertoFieldYou): second person prepositional object
+# pronoun used in the "to" header of the message header pane.  This is also
+# used for the fallback case if a header-specific localization is not
+# available.
+headertoFieldYou=You
+
+# LOCALIZATION NOTE (headerfromFieldYou): second person prepositional object
+# pronoun used in the "from" header of the message header pane.
+headerfromFieldYou=You
+
+# LOCALIZATION NOTE (headerreply-toFieldYou): second person prepositional
+# object pronoun used in the "reply-to" header of the message header pane.
+headerreply-toFieldYou=You
+
+# LOCALIZATION NOTE (headerccFieldYou): second person prepositional object
+# pronoun used in the "cc" header of the message header pane.
+headerccFieldYou=You
+
+# LOCALIZATION NOTE (headerbccFieldYou): second person prepositional object
+# pronoun used in the "bcc" header of the message header pane.
+headerbccFieldYou=You
 
 # Shown when content tabs are being loaded.
 loadingTab=Loading…
@@ -493,14 +512,13 @@ applyToCollapsedMsgs=Warning - this will delete messages in collapsed thread(s)
 applyToCollapsedAlwaysAskCheckbox=Always ask me before deleting messages in collapsed threads
 applyNowButton=Apply
 
-#LOCALIZATION NOTE (glodaSearch_results_why_*):  These strings populate the
-# glodaWhyColumn when performing a gloda-backed search, explaining why a
-# specific result is present in the search.  Because of how the message grouping
-# mechanism works, this value is both the value in the "Why" column as well as
-# the header for the group (when sorting/grouping on the why column.)  Short
-# strings are preferable so the why column can be understood without taking up
-# too much space.
-glodaSearch_results_why_contact=Контакт
-glodaSearch_results_why_subject=Тема
-glodaSearch_results_why_body=Тіло
-glodaSearch_results_why_attachment=Долучення
+mailServerLoginFailedTitle=Login Failed
+# LOCALIZATION NOTE (mailServerLoginFailedTitle): Insert "%S" in your
+# translation where you wish to display the hostname of the server to which
+# login failed.
+mailServerLoginFailed=Login to server %S failed.
+mailServerLoginFailedRetryButton=&Retry
+mailServerLoginFailedEnterNewPasswordButton=&Enter New Password
+
+extensions.{972ce4c6-7e08-4474-a285-3208198ce6fd}.name=Default
+extensions.{972ce4c6-7e08-4474-a285-3208198ce6fd}.description=The default theme.
