--- a/uk/mail/chrome/messenger/localMsgs.properties
+++ b/uk/mail/chrome/messenger/localMsgs.properties
@@ -38,14 +38,21 @@
 # The following are used by the local mail code to display progress/status/error messages
 #
 
+pop3EnterPasswordPromptTitle=Введіть ваш пароль
+
+# LOCALIZATION NOTE(pop3EnterPasswordPrompt): Do not translate the words "%1$S"
+# and "%2$S" below. Place the word %1$S where the user name should appear, and
+# %2$S where the host name should appear.
+pop3EnterPasswordPrompt=Введіть ваш пароль для %1$S на %2$S:
+
+# LOCALIZATION NOTE(pop3PreviouslyEnteredPasswordIsInvalidPrompt): Do not
+# translate the words "%1$S" and "%2$S" below. Place the word %1$S where the
+# user name should appear, and %2$S where the host name should appear.
+pop3PreviouslyEnteredPasswordIsInvalidPrompt=Будь ласка введіть новий пароль користувача %1$S на %2$S:
+
 ## @name MK_POP3_OUT_OF_DISK_SPACE
 ## @loc None
 -321=Не вистачає дискового простору, щоб завантажити нові повідомлення. Вилучте стару пошту, очистіть Смітник, або стисніть стару пошту і спробуйте ще раз.
-
-# Out of memory
-## @name LOCAL_OUT_OF_MEMORY
-## @loc None
--1000=Програмі не вистачає пам’яті.
 
 # Status - parsing folder
 ## @name LOCAL_STATUS_SELECTING_MAILBOX
@@ -136,30 +143,6 @@
 # LOCALIZATION NOTE(4016): Do not translate the word "POP3" below.
 4016=Команда DELE не виконана. Помилка відмічання повідомлення як вилученого.
 
-## @name POP3_ENTER_PASSWORD_PROMPT
-## @loc None
-# LOCALIZATION NOTE(4016): Do not translate the word "%1$s@%2$s" below.
-# Place the word "%1$s" and "%2$s" where email account name should appear (i.e. john.smith@example.org)
-4017=Введіть пароль для %1$s на %2$s\:
-
-## @name POP3_PREVIOUSLY_ENTERED_PASSWORD_IS_INVALID_ETC
-## @loc None
-# LOCALIZATION NOTE(4016): Do not translate the word "%s" below. It will receive the message returned by the server.
-# Do not translate "%.100s" and "%.100s". It will receive the email account name.
-4018=Введіть новий пароль для користувача %.100s на %.100s\:
-
-## @name POP3_NO_ANSWER
-## @loc None
-4019=Немає відповіді
-
-## @name POP3_ENTER_PASSWORD_PROMPT_TITLE
-## @loc None
-4020=Введіть пароль\:
-
-## @name POP3_FOLDER_FOR_TRASH
-## @loc None
-4023=Тека «Вилучені» вже містить теку «%s». Тека, яку ви тільки що вилучили, міститься в теці «Вилучені» під новою назвою «%s».
-
 # Status - stat failed
 ## @name POP3_STAT
 ## @loc None
@@ -168,10 +151,6 @@
 ## @name POP3_SERVER_SAID
 ## @loc None
 4025= Поштовий сервер %S відповів\:
-
-## @name DELETING_MSGS_STATUS
-## @loc None
-4026=Вилучення %S з %S повідомлень
 
 ## @name COPYING_MSGS_STATUS
 ## @loc None
@@ -190,10 +169,6 @@
 ## @name CANNOT_PROCESS_SECURE_AUTH
 ## @loc None
 4030=Поштовий сервер не підтримує захищену аутентифікацію.
-
-## @name MOVEMAIL_SPOOL_FILE_LOCKED
-## @loc None
-4032=Файл поштового буфера %S заблокований.
 
 ## @name MOVEMAIL_CANT_OPEN_SPOOL_FILE
 ## @loc None
