--- a/uk/mail/chrome/messenger/activity.properties
+++ b/uk/mail/chrome/messenger/activity.properties
@@ -64,24 +64,24 @@ movedFolder=Пересунено теку #1 до теки #2
 copiedFolder=Скопійовано теку #1 до теки #2
 # LOCALIZATION NOTE (renamedFolder): #1 and #2 are folder names
 renamedFolder=Теку #1 перейменовано на #2
-indexing=Indexing messages
+indexing=Індексування повідомлень
 # LOCALIZATION NOTE (indexingFolder): #1 is a folder name
-indexingFolder=Indexing messages in #1
-indexingStatusVague=Determining which messages to index
+indexingFolder=Індексування повідомлень у #1
+indexingStatusVague=Визначення які повідомлення індексувати
 # LOCALIZATION NOTE (indexingFolderStatusVague): #1 is a folder name
-indexingFolderStatusVague=Determining which messages to index in #1
+indexingFolderStatusVague=Визначення які повідомлення індексувати у #1
 # LOCALIZATION NOTE (indexingStatusExact):
 #   #1 is the number of the message currently being indexed
 #   #2 is the total number of messages being indexed
 #   #3 is the percentage of indexing that is complete
-indexingStatusExact=Indexing #1 of #2 message;Indexing #1 of #2 messages (#3% complete)
+indexingStatusExact=Індексування #1 з #2 повідомлення;Індексування #1 з #2 повідомлень (#3% готово);Індексування #1 з #2 повідомлень (#3% готово)
 # LOCALIZATION NOTE (indexingFolderStatusExact):
 #   #1 is the number of the message currently being indexed
 #   #2 is the total number of messages being indexed
 #   #3 is the percentage of indexing that is complete
 #   #4 is a folder name
-indexingFolderStatusExact=Indexing #1 of #2 message in #4;Indexing #1 of #2 messages in #4 (#3% complete)
+indexingFolderStatusExact=Індексування #1 з #2 повідомлення у #4;Індексування #1 з #2 повідомлень у #4 (#3% готово);Індексування #1 з #2 повідомлень у #4 (#3% готово)
 # LOCALIZATION NOTE (indexedFolder): #1 number of messages; #2 folder name
-indexedFolder=Indexed #1 message in #2;Indexed #1 messages in #2
+indexedFolder=Проіндексовано #1 повідомлення у in #2;Проіндексовано #1 повідомлень у #2;Проіндексовано #1 повідомлень у #2
 # LOCALIZATION NOTE (indexedFolderStatus): #1 number of seconds spent indexing
-indexedFolderStatus=#1 second elapsed;#1 seconds elapsed
+indexedFolderStatus=Минула #1 секунда;Минули #1 секунди;Минуло #1 секунд
