Resync mail/de with en-US. Thanks to Archaeopteryx.

--- a/de/mail/chrome/messenger/accountCreation.properties
+++ b/de/mail/chrome/messenger/accountCreation.properties
@@ -2,6 +2,7 @@
 
 # LOCALIZATION NOTE: %1$S will be the hostname of the server the user was trying to connect to.
 cleartext_warning=%1$S verwendet keine Verschlüsselung.
+# LOCALIZATION NOTE(selfsigned_warning): %1$S will be the hostname of the server the user was trying to connect to.
 selfsigned_warning=%1$S verwendet kein beglaubigtes Zertifikat.
 selfsigned_details=Im Normalfall weisen sich gesicherte Server durch ein beglaubigtes Zertifikat aus, um ihre Identität zu bestätigen. Die Verbindung zum Server wird verschlüsselt sein, aber die Identität des Servers kann nicht bestätigt werden.
 cleartext_details=Ungesicherte Server verwenden keine Verschlüsselung, um Ihre privaten Daten und Passwörter zu schützen. Eine Verbindung zu diesen Servern könnte Ihr Passwort und private Daten gegenüber Dritten offenbaren.
@@ -10,10 +11,13 @@ cleartext_details=Ungesicherte Server verwenden keine Verschlüsselung, um Ihre 
 default_server_tag= (Standard)
 
 # config titles
-searching_for_configs=Suchen…
+# LOCALIZATION NOTE(looking_up_settings): %1$S will be the brandShortName.
+looking_up_settings=%1$S sucht nach den Einstellungen für Ihr E-Mail-Konto
 manually_edit_config=Konfiguration bearbeiten
-finished_with_success=Beendet
-finished_with_error=Fehler
+# LOCALIZATION NOTE(found_settings): %1$S will be the brandShortName.
+found_settings=%1$S hat die Einstellungen für Ihr E-Mail-Konto gefunden.
+# LOCALIZATION NOTE(failed_to_find_settings): %1$S will be the brandShortName.
+failed_to_find_settings=%1$S konnte keine Einstellungen für Ihr E-Mail-Konto finden.
 
 # config subtitles
 check_preconfig=Vordefinierte Konfiguration suchen…
@@ -45,6 +49,5 @@ no_encryption=Keine Verschlüsselung
 ssl_tls=SSL/TLS
 starttls=STARTTLS
 
-name.error=Bitte geben Sie Ihren so Namen ein, wie er Ihren E-Mail-Empfängern gezeigt werden soll.
-email.error=Bitte überprüfen Sie die E-Mail-Adresse nochmals!
-password.error=Login ist fehlgeschlagen. Bitte überprüfen Sie Benutzername und Passwort nochmals.
+please_enter_name=Bitte geben Sie Ihren Namen so ein, wie er Ihren E-Mail-Empfängern gezeigt werden soll.
+double_check_email=Bitte überprüfen Sie die E-Mail-Adresse nochmals!
