--- a/de/mail/chrome/messenger/messenger.properties
+++ b/de/mail/chrome/messenger/messenger.properties
@@ -484,9 +484,27 @@ fileEmptyTitle = Datei ist leer
 #LOCALIZATION NOTE(fileEmptyMsg): %S is the filename
 fileEmptyMsg = Die Datei %S ist leer.
 
-# second person direct object pronoun; used in the collapsed header view if
-# the user is in the To or Cc field of a message
-headerFieldYou=Sie
+# LOCALIZATION NOTE (headertoFieldYou): second person prepositional object
+# pronoun used in the "to" header of the message header pane.  This is also
+# used for the fallback case if a header-specific localization is not
+# available.
+headertoFieldYou=Sie
+
+# LOCALIZATION NOTE (headerfromFieldYou): second person prepositional object
+# pronoun used in the "from" header of the message header pane.
+headerfromFieldYou=Ihnen
+
+# LOCALIZATION NOTE (headerreply-toFieldYou): second person prepositional
+# object pronoun used in the "reply-to" header of the message header pane.
+headerreply-toFieldYou=Sie
+
+# LOCALIZATION NOTE (headerccFieldYou): second person prepositional object
+# pronoun used in the "cc" header of the message header pane.
+headerccFieldYou=Sie
+
+# LOCALIZATION NOTE (headerbccFieldYou): second person prepositional object
+# pronoun used in the "bcc" header of the message header pane.
+headerbccFieldYou=Sie
 
 # Shown when content tabs are being loaded.
 loadingTab=Laden…
@@ -495,18 +513,6 @@ applyToCollapsedMsgsTitle=Bestätigen Sie das Löschen der Nachrichten in zugekl
 applyToCollapsedMsgs=Warnung - Dies wird Nachrichten in zugeklappten Themen löschen
 applyToCollapsedAlwaysAskCheckbox=Immer fragen, bevor Nachrichten in zugeklappten Themen gelöscht werden
 applyNowButton=Ausführen
-
-#LOCALIZATION NOTE (glodaSearch_results_why_*):  These strings populate the
-# glodaWhyColumn when performing a gloda-backed search, explaining why a
-# specific result is present in the search.  Because of how the message grouping
-# mechanism works, this value is both the value in the "Why" column as well as
-# the header for the group (when sorting/grouping on the why column.)  Short
-# strings are preferable so the why column can be understood without taking up
-# too much space.
-glodaSearch_results_why_contact=Beteiligte
-glodaSearch_results_why_subject=Betreff
-glodaSearch_results_why_body=Inhalt
-glodaSearch_results_why_attachment=Anhänge
 
 mailServerLoginFailedTitle=Login fehlgeschlagen
 # LOCALIZATION NOTE (mailServerLoginFailedTitle): Insert "%S" in your
